--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-ui.js"><\/script>')</script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
-
+        <script src="js/vendor/jquery.ui.touch-punch.min.js"></script>
+                     
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
